@@ -585,12 +585,31 @@ int get_parent_dest_queues(
   pbs_queue *pque_parent;
   pbs_queue *pque_dest;
   char       jobid[PBS_MAXSVRJOBID + 1];
+  char       log_buf[LOCAL_LOG_BUF_SIZE + 1];
   job       *pjob = *pjob_ptr;
   int        index_parent;
   int        index_dest;
   int        rc = PBSE_NONE;
 
   strcpy(jobid, pjob->ji_qs.ji_jobid);
+
+  if ((queue_parent_name != NULL) && (queue_dest_name != NULL))
+    {
+    if (!strcmp(queue_parent_name, queue_dest_name))
+      {
+      /* parent and destination are the same. 
+         Job is already in destnation queue. return */
+      snprintf(log_buf, sizeof(log_buf), "parent and destination queues are the same: parent %s - dest %s. jobid: %s",
+          queue_parent_name,
+          queue_dest_name,
+          jobid);
+      log_event(PBSEVENT_JOB, PBS_EVENTCLASS_JOB, __func__, log_buf);
+      return(-1); 
+      }
+    }
+  else
+    return(-1);
+
   unlock_ji_mutex(pjob, __func__, "1", LOGLEVEL);
 
   unlock_queue(*parent, __func__, NULL, 0);
